fixes spacing and nav text size"

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,16 +79,17 @@ p.clear {
   float: left;
   color: rgba(247, 247, 255, 0.5);
   padding-right: 10px;
-  transition: all .75s ease;
+  transition: all .5s ease;
   
 }
 
 .home_menu a {
   color: rgba(247, 247, 255, 0.5);
-  font-size: 15px;
+  font-size: 18px;
   font-family: Inconsolata;
-  transition: all .75s ease;
+  transition: all .2s ease;
 }
+
 
 .home_menu a:hover {
   color: rgba(247, 247, 255, 1);
@@ -208,9 +209,12 @@ hr {
 #skills {
   clear: both;
   padding-top: 80px;
+  width: 100%;
+  height: 650px;
 }
 
 #portfolio {
+  padding-top: 50px;
 }
 .portfolio_content {
   width: 600px;
@@ -276,7 +280,7 @@ hr {
   background-color: rgba(247, 247, 255, 0.75);
   color: #001019;
   text-align: center;
-  height: 350px;
+  height: 380px;
   padding: 0;
   margin: 0 auto;
 
